Don't stop content when location.href is set to an anchor.  Bug 233963, r+sr=jst